# crewai-sample

./: .env.local  .gitignore  README.md  pyproject.toml
_logs/: google.md
src/crew_interview/: crew.py  main.py
src/crew_interview/config/: agents.yaml  tasks.yaml
